--- a/package.json
+++ b/package.json
@@ -9,9 +9,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "clipboard": "^2.0.8",
     "core-js": "^3.6.5",
+    "driver.js": "^0.9.8",
+    "element-ui": "^2.4.5",
+    "fuse.js": "^6.4.6",
+    "js-cookie": "^2.2.1",
+    "loadsh": "^0.0.4",
+    "mockjs": "^1.1.0",
+    "normalize.css": "^8.0.1",
+    "path-to-regexp": "^6.2.0",
+    "screenfull": "^5.1.0",
+    "throttle-debounce": "^3.0.1",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-splitpane": "^1.0.6",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -24,6 +38,7 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -32,6 +47,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
