--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "script-ext-html-webpack-plugin": "^2.1.5",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
